# a

./: README.md  analisis-fail.md  details.md  fallo.txt  index.html  latest.json  package-lock.json  package.json  pnpm-lock.yaml  start_web.bat  vite.config.js
.github/workflows/: CI.yml  PublishLinuxOS.yml  PublishMacOs.yml  PublishWindowOS.yml  Release.yml  TestCI.yml
.github/workflows/old/: PublishWindowOS.yml
docs/: key-document.md
js/: script.js
scripts/: sign-with-codesigntool.ps1
src/: auto-update.js  consts.js  index.html  main.js  state_handler.js  style.css  util.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
